<resources>
    <string name="app_name">Krypto2Factor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_qr">Scan QR Code</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_successful">Login successful</string>
    <string name="id">ID: %1$s</string>
    <string name="username">%1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="logout">Logout %1$s</string>
    <string name="logoutConfirmation">Successfully logged out</string>
    <string name="loginicon">LoginIcon</string>
    <string name="str_otp">Your OTP: %1$s</string>
    <string name="str_otp_countdown">New OTP generated in: %1$s</string>
    <string name="str_req_new_otp">Requesting new OTP…</string>
    <string name="str_check_qr">Checking for QR Code…</string>
    <string name="str_found_otp">Found OTP!</string>
    <string name="str_none">NONE</string>
    <string name="str_activate_prompt">Please mark your device as active using the web-interface</string>
    <string name="refresh">Refresh</string>
</resources>
