<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:textDirection="inherit"
    tools:context=".OTPActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txt_countdown"
            android:layout_width="175dp"
            android:layout_height="25dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:text="@string/str_otp_countdown"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.example.krypto2factor.Utils.CircularProgressBar
            android:id="@+id/pb_refresh"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progress="0"
            app:lineThickness="4dp" />

        <TextView
            android:id="@+id/txt_otp"
            android:layout_width="234dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/str_none"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_refresh"
            android:text="@string/refresh"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_marginTop="230dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:textStyle="bold"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>